@@ -12,7 +12,7 @@ public class ServerContainer {
     public boolean ALWAYS_SCALE_MOB_LEVEL_TO_PLAYER = false;
 
     public double REPAIR_FUEL_NEEDED_MULTI = 1;
-    public double REGEN_HUNGER_COST = 20;
+    public double REGEN_HUNGER_COST = 15;
     public double EXP_LOSS_ON_DEATH = 0.05F;
     public double STAT_POINTS_PER_LVL = 1;
     public double VANILLA_MOB_DMG_AS_EXILE_DMG = 0.5F;
