@@ -54,13 +54,13 @@ public class TidalWaveSpell extends BaseSpell {
     public PreCalcSpellConfigs getPreCalcConfig() {
         PreCalcSpellConfigs c = new PreCalcSpellConfigs();
 
-        c.set(SC.MANA_COST, 10, 15);
-        c.set(SC.BASE_VALUE, 3, 12);
-        c.set(SC.ATTACK_SCALE_VALUE, 0.05F, 0.3F);
+        c.set(SC.MANA_COST, 8, 13);
+        c.set(SC.BASE_VALUE, 3, 6);
+        c.set(SC.ATTACK_SCALE_VALUE, 0.1F, 0.3F);
         c.set(SC.SHOOT_SPEED, 0.6F, 0.9F);
         c.set(SC.PROJECTILE_COUNT, 3, 5);
-        c.set(SC.CAST_TIME_TICKS, 75, 45);
-        c.set(SC.COOLDOWN_SECONDS, 20, 10);
+        c.set(SC.CAST_TIME_TICKS, 0, 0);
+        c.set(SC.COOLDOWN_TICKS, 20, 20);
         c.set(SC.TIMES_TO_CAST, 3, 4);
         c.set(SC.DURATION_TICKS, 60, 80);
 
