@@ -36,7 +36,7 @@ public class LivingHurtUtils {
 
             List<ItemStack> curios = MyCurioUtils.getAllSlots(player);
 
-            curios.forEach(x -> x.damage(getItemDamage(dmg) * 2, player, (entity) -> {
+            curios.forEach(x -> x.damage(getItemDamage(dmg) * 3, player, (entity) -> {
                 entity.sendEquipmentBreakStatus(EquipmentSlot.MAINHAND);
             }));
 
