@@ -18,23 +18,23 @@ public class AddMobSpawns {
 
         List<SpawnEntry> all = new ArrayList<>();
 
-        public SpawnEntry ARCANE_SLIME = of(ENTITIES.ARCANE_SLIME, 100, 1, 2);
-        public SpawnEntry FIRE_SLIME = of(ENTITIES.FIRE_SLIME, 100, 1, 2);
-        public SpawnEntry WATER_SLIME = of(ENTITIES.WATER_SLIME, 100, 1, 2);
-        public SpawnEntry THUNDER_SLIME = of(ENTITIES.THUNDER_SLIME, 100, 1, 2);
-        public SpawnEntry NATURE_SLIME = of(ENTITIES.NATURE_SLIME, 100, 1, 2);
+        public SpawnEntry ARCANE_SLIME = of(ENTITIES.ARCANE_SLIME, 50, 1, 2);
+        public SpawnEntry FIRE_SLIME = of(ENTITIES.FIRE_SLIME, 50, 1, 2);
+        public SpawnEntry WATER_SLIME = of(ENTITIES.WATER_SLIME, 50, 1, 2);
+        public SpawnEntry THUNDER_SLIME = of(ENTITIES.THUNDER_SLIME, 50, 1, 2);
+        public SpawnEntry NATURE_SLIME = of(ENTITIES.NATURE_SLIME, 50, 1, 2);
 
-        public SpawnEntry ARCANE_SPIDER = of(ENTITIES.ARCANE_SPIDER, 200, 2, 3);
-        public SpawnEntry FIRE_SPIDER = of(ENTITIES.FIRE_SPIDER, 200, 2, 3);
-        public SpawnEntry WATER_SPIDER = of(ENTITIES.WATER_SPIDER, 200, 2, 3);
-        public SpawnEntry THUNDER_SPIDER = of(ENTITIES.THUNDER_SPIDER, 200, 2, 3);
-        public SpawnEntry NATURE_SPIDER = of(ENTITIES.NATURE_SPIDER, 200, 2, 3);
+        public SpawnEntry ARCANE_SPIDER = of(ENTITIES.ARCANE_SPIDER, 150, 2, 3);
+        public SpawnEntry FIRE_SPIDER = of(ENTITIES.FIRE_SPIDER, 150, 2, 3);
+        public SpawnEntry WATER_SPIDER = of(ENTITIES.WATER_SPIDER, 150, 2, 3);
+        public SpawnEntry THUNDER_SPIDER = of(ENTITIES.THUNDER_SPIDER, 150, 2, 3);
+        public SpawnEntry NATURE_SPIDER = of(ENTITIES.NATURE_SPIDER, 150, 2, 3);
 
-        public SpawnEntry ARCANE_ZOMBIE = of(ENTITIES.ARCANE_ZOMBIE, 150, 2, 3);
-        public SpawnEntry FIRE_ZOMBIE = of(ENTITIES.FIRE_ZOMBIE, 150, 2, 3);
-        public SpawnEntry WATER_ZOMBIE = of(ENTITIES.WATER_ZOMBIE, 150, 2, 3);
-        public SpawnEntry THUNDER_ZOMBIE = of(ENTITIES.THUNDER_ZOMBIE, 150, 2, 3);
-        public SpawnEntry NATURE_ZOMBIE = of(ENTITIES.NATURE_ZOMBIE, 150, 2, 3);
+        public SpawnEntry ARCANE_ZOMBIE = of(ENTITIES.ARCANE_ZOMBIE, 100, 2, 3);
+        public SpawnEntry FIRE_ZOMBIE = of(ENTITIES.FIRE_ZOMBIE, 100, 2, 3);
+        public SpawnEntry WATER_ZOMBIE = of(ENTITIES.WATER_ZOMBIE, 100, 2, 3);
+        public SpawnEntry THUNDER_ZOMBIE = of(ENTITIES.THUNDER_ZOMBIE, 100, 2, 3);
+        public SpawnEntry NATURE_ZOMBIE = of(ENTITIES.NATURE_ZOMBIE, 100, 2, 3);
 
         public SpawnEntry FIRE_MAGE = of(ENTITIES.FIRE_MAGE, 60, 1, 1);
         public SpawnEntry WATER_MAGE = of(ENTITIES.WATER_MAGE, 60, 1, 1);
@@ -47,10 +47,10 @@ public class AddMobSpawns {
         public SpawnEntry THUNDER_CHICKEN = of(ENTITIES.THUNDER_CHICKEN, 50, 1, 1);
         public SpawnEntry NATURE_CHICKEN = of(ENTITIES.NATURE_CHICKEN, 50, 1, 1);
 
-        public SpawnEntry FIRE_SKELETON = of(ENTITIES.FIRE_SKELETON, 50, 1, 1);
-        public SpawnEntry WATER_SKELETON = of(ENTITIES.WATER_SKELETON, 50, 1, 1);
-        public SpawnEntry THUNDER_SKELETON = of(ENTITIES.THUNDER_SKELETON, 50, 1, 1);
-        public SpawnEntry NATURE_SKELETON = of(ENTITIES.NATURE_SKELETON, 50, 1, 1);
+        public SpawnEntry FIRE_SKELETON = of(ENTITIES.FIRE_SKELETON, 60, 1, 1);
+        public SpawnEntry WATER_SKELETON = of(ENTITIES.WATER_SKELETON, 60, 1, 1);
+        public SpawnEntry THUNDER_SKELETON = of(ENTITIES.THUNDER_SKELETON, 60, 1, 1);
+        public SpawnEntry NATURE_SKELETON = of(ENTITIES.NATURE_SKELETON, 60, 1, 1);
 
         SpawnEntry of(EntityType type, int weight, int min, int max) {
             SpawnEntry entry = new SpawnEntry(type, weight, min, max);
