@@ -1,19 +1,13 @@
 package com.robertx22.age_of_exile.mixins;
 
+import com.robertx22.age_of_exile.mixin_methods.OnItemUseCastSpell;
 import com.robertx22.age_of_exile.mixin_methods.TooltipMethod;
-import com.robertx22.age_of_exile.mmorpg.Packets;
-import com.robertx22.age_of_exile.saveclasses.item_classes.SkillGemData;
-import com.robertx22.age_of_exile.uncommon.datasaving.Gear;
-import com.robertx22.age_of_exile.uncommon.datasaving.Load;
-import com.robertx22.age_of_exile.vanilla_mc.packets.spells.CastSpellPacket;
-import net.minecraft.client.gui.screen.Screen;
 import net.minecraft.client.item.TooltipContext;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.item.ItemStack;
 import net.minecraft.text.Text;
 import net.minecraft.util.Hand;
 import net.minecraft.util.TypedActionResult;
-import net.minecraft.util.UseAction;
 import net.minecraft.world.World;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.injection.At;
@@ -37,26 +31,6 @@ public abstract class ItemStackMixin {
     @Inject(method = "use", at = @At("HEAD"), cancellable = true)
     private void onItemUse(World world, PlayerEntity user, Hand hand, CallbackInfoReturnable<TypedActionResult<ItemStack>> ci) {
         ItemStack stack = (ItemStack) (Object) this;
-        if (world.isClient) {
-            if (Gear.has(stack)) {
-
-                SkillGemData gem = Load.spells(user)
-                    .getCurrentSkillGem();
-                if (gem != null && gem.getSpell() != null) {
-                    if (gem.getSpell()
-                        .getImmutableConfigs().castingWeapon.predicate.predicate.test(user)) {
-
-                        if (stack.getUseAction() == UseAction.NONE) {
-                            Packets.sendToServer(new CastSpellPacket(user));
-                        } else {
-                            if (Screen.hasShiftDown()) {
-                                Packets.sendToServer(new CastSpellPacket(user));
-                                ci.setReturnValue(TypedActionResult.success(stack));
-                            }
-                        }
-                    }
-                }
-            }
-        }
+        OnItemUseCastSpell.onItemUse(stack, world, user, hand, ci);
     }
 }
