@@ -17,7 +17,7 @@ public class OnTickRandomSpeedBoost {
     static EntityAttributeModifier ATTACKING_SPEED_BOOST = new EntityAttributeModifier(
         UUID.fromString("020E0DFB-87AE-4633-9556-521010E291A0"),
         "Attacking speed boost",
-        0.075D,
+        0.05D,
         EntityAttributeModifier.Operation.ADDITION);
     // attribute copied from enderman or zombifiedpiglin, idk which attribute it is..
 
