@@ -84,9 +84,11 @@ Minor notes:
 So if there's 100 different sword types, and 5 axe types, they'll still have same chance to drop if their gear slots have same weight.
 - renamed all my packages to my new mod name
 - mob affixes now aren't separated into prefixes and suffixes
+- you can now hold right click to keep casting instant spells like fireball
 - fix jewel crash bug
 - lvl 1 common mobs should now have similar health as vanilla minecraft.
 - mobs will have less hp on average
+- reduced hp regen hunger spending slightly
 - mobs now have extra attributes per rarity, like move speed and knockback resistance
 - reworked modify station gui to be instant modify with a button click
 - increased chance for gear to be higher rarity
